// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Index.tsx 共用元件的預設輸出(不傳新 props) > 上傳 → 辨識 → 留聯絡資訊 → 供應商媒合,每一段輸出與改動前一致 > IngredientAnalysis 有資料 1`] = `
<div
  id="analysis-results"
>
  <section
    class="py-16"
  >
    <div
      class="container px-4 mx-auto"
    >
      <div
        class="max-w-4xl mx-auto space-y-8"
      >
        <div
          class="text-center space-y-4"
        >
          <h2
            class="text-4xl md:text-5xl font-bold"
          >
            已識別食材
          </h2>
          <p
            class="text-xl text-muted-foreground"
          >
            AI 從你的菜單推算出這些要採購的食材
          </p>
        </div>
        <div
          class="rounded-lg border bg-card text-card-foreground shadow-sm p-8 shadow-medium"
        >
          <div
            class="space-y-6"
          >
            <div
              class="grid grid-cols-1 md:grid-cols-2 gap-4"
            >
              <div
                class="flex items-center space-x-3 p-4 bg-accent rounded-lg hover:bg-accent/80 transition-colors"
              >
                <svg
                  class="lucide lucide-circle-check w-5 h-5 text-primary flex-shrink-0"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                  />
                  <path
                    d="m9 12 2 2 4-4"
                  />
                </svg>
                <span
                  class="font-medium"
                >
                  牛肉 5kg
                </span>
              </div>
              <div
                class="flex items-center space-x-3 p-4 bg-accent rounded-lg hover:bg-accent/80 transition-colors"
              >
                <svg
                  class="lucide lucide-circle-check w-5 h-5 text-primary flex-shrink-0"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                  />
                  <path
                    d="m9 12 2 2 4-4"
                  />
                </svg>
                <span
                  class="font-medium"
                >
                  洋蔥 3kg
                </span>
              </div>
              <div
                class="flex items-center space-x-3 p-4 bg-accent rounded-lg hover:bg-accent/80 transition-colors"
              >
                <svg
                  class="lucide lucide-circle-check w-5 h-5 text-primary flex-shrink-0"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                  />
                  <path
                    d="m9 12 2 2 4-4"
                  />
                </svg>
                <span
                  class="font-medium"
                >
                  雞蛋 60顆
                </span>
              </div>
              <div
                class="flex items-center space-x-3 p-4 bg-accent rounded-lg hover:bg-accent/80 transition-colors"
              >
                <svg
                  class="lucide lucide-circle-check w-5 h-5 text-primary flex-shrink-0"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                  />
                  <path
                    d="m9 12 2 2 4-4"
                  />
                </svg>
                <span
                  class="font-medium"
                >
                  青蔥
                </span>
              </div>
            </div>
            <div
              class="pt-6 border-t border-border"
            >
              <div
                class="flex flex-col sm:flex-row justify-between items-center gap-4"
              >
                <div
                  class="text-center sm:text-left"
                >
                  <p
                    class="text-sm text-muted-foreground"
                  >
                    Total Identified
                  </p>
                  <p
                    class="text-2xl font-bold text-primary"
                  >
                    4
                     Ingredients
                  </p>
                </div>
                <button
                  class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-gradient-to-r from-primary to-primary-glow text-primary-foreground hover:shadow-medium hover:scale-105 transition-all duration-300 shadow-soft h-11 rounded-md text-lg px-8 py-6"
                >
                  <svg
                    class="lucide lucide-shopping-cart mr-2"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="8"
                      cy="21"
                      r="1"
                    />
                    <circle
                      cx="19"
                      cy="21"
                      r="1"
                    />
                    <path
                      d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"
                    />
                  </svg>
                  尋找供應商
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Index.tsx 共用元件的預設輸出(不傳新 props) > 上傳 → 辨識 → 留聯絡資訊 → 供應商媒合,每一段輸出與改動前一致 > IngredientAnalysis 無資料 1`] = `
<div
  id="analysis-results"
/>
`;

exports[`Index.tsx 共用元件的預設輸出(不傳新 props) > 上傳 → 辨識 → 留聯絡資訊 → 供應商媒合,每一段輸出與改動前一致 > MenuUpload 分析後 1`] = `
<section
  class="py-24"
  id="upload-section"
>
  <div
    class="container px-4 mx-auto"
  >
    <div
      class="max-w-4xl mx-auto space-y-8"
    >
      <div
        class="text-center space-y-4"
      >
        <h2
          class="text-4xl md:text-5xl font-bold"
        >
          上傳菜單進行分析
        </h2>
        <p
          class="text-xl text-muted-foreground"
        >
          上傳清晰的菜單照片，AI將自動識別您需要的食材
        </p>
      </div>
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm p-8 md:p-12 shadow-medium"
      >
        <div
          class="space-y-6"
        >
          <div
            class="relative rounded-xl overflow-hidden"
          >
            <img
              alt="Menu preview"
              class="w-full h-auto max-h-[500px] object-contain bg-muted"
              src="blob:menu-preview"
            />
            <div
              class="absolute top-4 right-4"
            >
              <button
                class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-destructive text-destructive-foreground hover:bg-destructive/90 h-9 rounded-md px-3"
              >
                移除圖片
              </button>
            </div>
          </div>
          <div
            class="flex items-center space-x-3 p-4 bg-accent rounded-lg"
          >
            <svg
              class="lucide lucide-file-image w-6 h-6 text-primary"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
              />
              <path
                d="M14 2v4a2 2 0 0 0 2 2h4"
              />
              <circle
                cx="10"
                cy="12"
                r="2"
              />
              <path
                d="m20 17-1.296-1.296a2.41 2.41 0 0 0-3.408 0L9 22"
              />
            </svg>
            <div
              class="flex-1"
            >
              <p
                class="font-medium"
              >
                menu.png
              </p>
              <p
                class="text-sm text-muted-foreground"
              >
                0.00
                 MB
              </p>
            </div>
          </div>
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-gradient-to-r from-primary to-primary-glow text-primary-foreground hover:shadow-medium hover:scale-105 transition-all duration-300 shadow-soft h-11 rounded-md px-8 w-full text-lg py-6"
          >
            開始分析
          </button>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`Index.tsx 共用元件的預設輸出(不傳新 props) > 上傳 → 辨識 → 留聯絡資訊 → 供應商媒合,每一段輸出與改動前一致 > MenuUpload 初始 1`] = `
<section
  class="py-24"
  id="upload-section"
>
  <div
    class="container px-4 mx-auto"
  >
    <div
      class="max-w-4xl mx-auto space-y-8"
    >
      <div
        class="text-center space-y-4"
      >
        <h2
          class="text-4xl md:text-5xl font-bold"
        >
          上傳菜單進行分析
        </h2>
        <p
          class="text-xl text-muted-foreground"
        >
          上傳清晰的菜單照片，AI將自動識別您需要的食材
        </p>
      </div>
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm p-8 md:p-12 shadow-medium"
      >
        <div
          class="space-y-6"
        >
          <label
            class="cursor-pointer"
            for="menu-upload"
          >
            <div
              class="border-2 border-dashed border-primary/30 rounded-2xl p-12 hover:border-primary/60 hover:bg-accent/50 transition-all duration-300 text-center"
            >
              <div
                class="flex flex-col items-center space-y-4"
              >
                <div
                  class="w-20 h-20 rounded-full bg-primary/10 flex items-center justify-center"
                >
                  <svg
                    class="lucide lucide-upload w-10 h-10 text-primary"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
                    />
                    <polyline
                      points="17 8 12 3 7 8"
                    />
                    <line
                      x1="12"
                      x2="12"
                      y1="3"
                      y2="15"
                    />
                  </svg>
                </div>
                <div
                  class="space-y-2"
                >
                  <p
                    class="text-xl font-semibold"
                  >
                    拖放菜單圖片到此處
                  </p>
                  <p
                    class="text-muted-foreground"
                  >
                    或
                  </p>
                  <button
                    class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-11 rounded-md px-8"
                    type="button"
                  >
                    <svg
                      class="lucide lucide-file-image mr-2 h-5 w-5"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
                      />
                      <path
                        d="M14 2v4a2 2 0 0 0 2 2h4"
                      />
                      <circle
                        cx="10"
                        cy="12"
                        r="2"
                      />
                      <path
                        d="m20 17-1.296-1.296a2.41 2.41 0 0 0-3.408 0L9 22"
                      />
                    </svg>
                    選擇檔案
                  </button>
                  <p
                    class="text-sm text-muted-foreground"
                  >
                    支援 JPG、PNG 格式，最大 5MB
                  </p>
                </div>
              </div>
            </div>
          </label>
          <input
            accept="image/*"
            class="hidden"
            id="menu-upload"
            type="file"
          />
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`Index.tsx 共用元件的預設輸出(不傳新 props) > 上傳 → 辨識 → 留聯絡資訊 → 供應商媒合,每一段輸出與改動前一致 > MenuUpload 已選照片 1`] = `
<section
  class="py-24"
  id="upload-section"
>
  <div
    class="container px-4 mx-auto"
  >
    <div
      class="max-w-4xl mx-auto space-y-8"
    >
      <div
        class="text-center space-y-4"
      >
        <h2
          class="text-4xl md:text-5xl font-bold"
        >
          上傳菜單進行分析
        </h2>
        <p
          class="text-xl text-muted-foreground"
        >
          上傳清晰的菜單照片，AI將自動識別您需要的食材
        </p>
      </div>
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm p-8 md:p-12 shadow-medium"
      >
        <div
          class="space-y-6"
        >
          <div
            class="relative rounded-xl overflow-hidden"
          >
            <img
              alt="Menu preview"
              class="w-full h-auto max-h-[500px] object-contain bg-muted"
              src="blob:menu-preview"
            />
            <div
              class="absolute top-4 right-4"
            >
              <button
                class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-destructive text-destructive-foreground hover:bg-destructive/90 h-9 rounded-md px-3"
              >
                移除圖片
              </button>
            </div>
          </div>
          <div
            class="flex items-center space-x-3 p-4 bg-accent rounded-lg"
          >
            <svg
              class="lucide lucide-file-image w-6 h-6 text-primary"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
              />
              <path
                d="M14 2v4a2 2 0 0 0 2 2h4"
              />
              <circle
                cx="10"
                cy="12"
                r="2"
              />
              <path
                d="m20 17-1.296-1.296a2.41 2.41 0 0 0-3.408 0L9 22"
              />
            </svg>
            <div
              class="flex-1"
            >
              <p
                class="font-medium"
              >
                menu.png
              </p>
              <p
                class="text-sm text-muted-foreground"
              >
                0.00
                 MB
              </p>
            </div>
          </div>
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-gradient-to-r from-primary to-primary-glow text-primary-foreground hover:shadow-medium hover:scale-105 transition-all duration-300 shadow-soft h-11 rounded-md px-8 w-full text-lg py-6"
          >
            開始分析
          </button>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`Index.tsx 共用元件的預設輸出(不傳新 props) > 上傳 → 辨識 → 留聯絡資訊 → 供應商媒合,每一段輸出與改動前一致 > SupplierMatch 有結果 1`] = `
<div
  id="supplier-section"
>
  <section
    class="py-16 bg-muted/30"
  >
    <div
      class="container px-4 mx-auto"
    >
      <div
        class="max-w-6xl mx-auto space-y-8"
      >
        <div
          class="text-center space-y-4"
        >
          <h2
            class="text-4xl md:text-5xl font-bold"
          >
            為您媒合的供應商
          </h2>
          <p
            class="text-xl text-muted-foreground"
          >
            根據您的食材需求,AI 已從合作供應商中找出最合適的選擇
          </p>
        </div>
        <div
          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6"
        >
          <div
            class="rounded-lg border bg-card text-card-foreground shadow-sm p-6 shadow-soft hover:shadow-medium transition-all duration-300 hover:-translate-y-1 flex flex-col"
          >
            <div
              class="space-y-4 flex-1 flex flex-col"
            >
              <div
                class="flex items-start justify-between gap-4"
              >
                <div
                  class="space-y-1 min-w-0"
                >
                  <h3
                    class="text-xl font-bold"
                  >
                    鮮綠蔬果行
                  </h3>
                  <p
                    class="text-sm text-muted-foreground line-clamp-2"
                  >
                    北部餐廳蔬果直送
                  </p>
                </div>
                <div
                  aria-label="媒合分數 92"
                  class="relative w-16 h-16 flex-shrink-0"
                >
                  <svg
                    class="w-16 h-16 -rotate-90"
                    viewBox="0 0 64 64"
                  >
                    <circle
                      class="stroke-muted"
                      cx="32"
                      cy="32"
                      fill="none"
                      r="26"
                      stroke-width="6"
                    />
                    <circle
                      class="stroke-primary transition-all duration-700"
                      cx="32"
                      cy="32"
                      fill="none"
                      r="26"
                      stroke-dasharray="163.36281798666926"
                      stroke-dashoffset="13.069025438933535"
                      stroke-linecap="round"
                      stroke-width="6"
                    />
                  </svg>
                  <div
                    class="absolute inset-0 flex flex-col items-center justify-center"
                  >
                    <span
                      class="text-lg font-bold text-primary leading-none"
                    >
                      92
                    </span>
                    <span
                      class="text-[10px] text-muted-foreground leading-none mt-0.5"
                    >
                      分
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="flex items-start space-x-2"
              >
                <svg
                  class="lucide lucide-map-pin w-4 h-4 mt-1 flex-shrink-0 text-muted-foreground"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                  />
                  <circle
                    cx="12"
                    cy="10"
                    r="3"
                  />
                </svg>
                <div
                  class="flex flex-wrap gap-1.5"
                >
                  <div
                    class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-primary/10 text-primary hover:bg-primary/20"
                  >
                    台北市
                  </div>
                  <div
                    class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-primary/10 text-primary hover:bg-primary/20"
                  >
                    新北市
                  </div>
                </div>
              </div>
              <div
                class="flex items-center space-x-2 text-sm font-medium text-primary"
              >
                <svg
                  class="lucide lucide-circle-check w-4 h-4 flex-shrink-0"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                  />
                  <path
                    d="m9 12 2 2 4-4"
                  />
                </svg>
                <span>
                  符合 
                  2
                   項需求
                </span>
              </div>
              <div
                class="space-y-2"
              >
                <p
                  class="text-sm font-medium"
                >
                  可供應品項
                </p>
                <div
                  class="flex flex-wrap gap-2"
                >
                  <div
                    class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground border-primary/30 font-normal"
                  >
                    洋蔥 → 洋蔥 $38/kg
                  </div>
                  <div
                    class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground border-primary/30 font-normal"
                  >
                    青蔥 → 青蔥 $120/kg
                  </div>
                </div>
              </div>
              <div
                class="mt-auto pt-2"
              >
                <button
                  class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-gradient-to-r from-primary to-primary-glow text-primary-foreground hover:shadow-medium hover:scale-105 transition-all duration-300 shadow-soft h-10 px-4 py-2 w-full"
                >
                  查看供應商並詢價
                  <svg
                    class="lucide lucide-arrow-right ml-2 w-4 h-4"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5 12h14"
                    />
                    <path
                      d="m12 5 7 7-7 7"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
          <div
            class="rounded-lg border bg-card text-card-foreground shadow-sm p-6 shadow-soft hover:shadow-medium transition-all duration-300 hover:-translate-y-1 flex flex-col"
          >
            <div
              class="space-y-4 flex-1 flex flex-col"
            >
              <div
                class="flex items-start justify-between gap-4"
              >
                <div
                  class="space-y-1 min-w-0"
                >
                  <h3
                    class="text-xl font-bold"
                  >
                    大成肉品
                  </h3>
                </div>
                <div
                  aria-label="媒合分數 81"
                  class="relative w-16 h-16 flex-shrink-0"
                >
                  <svg
                    class="w-16 h-16 -rotate-90"
                    viewBox="0 0 64 64"
                  >
                    <circle
                      class="stroke-muted"
                      cx="32"
                      cy="32"
                      fill="none"
                      r="26"
                      stroke-width="6"
                    />
                    <circle
                      class="stroke-primary transition-all duration-700"
                      cx="32"
                      cy="32"
                      fill="none"
                      r="26"
                      stroke-dasharray="163.36281798666926"
                      stroke-dashoffset="31.03893541746715"
                      stroke-linecap="round"
                      stroke-width="6"
                    />
                  </svg>
                  <div
                    class="absolute inset-0 flex flex-col items-center justify-center"
                  >
                    <span
                      class="text-lg font-bold text-primary leading-none"
                    >
                      81
                    </span>
                    <span
                      class="text-[10px] text-muted-foreground leading-none mt-0.5"
                    >
                      分
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="flex items-center space-x-2 text-sm font-medium text-primary"
              >
                <svg
                  class="lucide lucide-circle-check w-4 h-4 flex-shrink-0"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                  />
                  <path
                    d="m9 12 2 2 4-4"
                  />
                </svg>
                <span>
                  符合 
                  1
                   項需求
                </span>
              </div>
              <div
                class="space-y-2"
              >
                <p
                  class="text-sm font-medium"
                >
                  可供應品項
                </p>
                <div
                  class="flex flex-wrap gap-2"
                >
                  <div
                    class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground border-primary/30 font-normal"
                  >
                    牛肉 → 牛腱 $520/kg
                  </div>
                </div>
              </div>
              <div
                class="mt-auto pt-2"
              >
                <button
                  class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-gradient-to-r from-primary to-primary-glow text-primary-foreground hover:shadow-medium hover:scale-105 transition-all duration-300 shadow-soft h-10 px-4 py-2 w-full"
                >
                  查看供應商並詢價
                  <svg
                    class="lucide lucide-arrow-right ml-2 w-4 h-4"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5 12h14"
                    />
                    <path
                      d="m12 5 7 7-7 7"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Index.tsx 共用元件的預設輸出(不傳新 props) > 上傳 → 辨識 → 留聯絡資訊 → 供應商媒合,每一段輸出與改動前一致 > SupplierMatch 未顯示 1`] = `
<div
  id="supplier-section"
/>
`;

exports[`Index.tsx 共用元件的預設輸出(不傳新 props) > 上傳 → 辨識 → 留聯絡資訊 → 供應商媒合,每一段輸出與改動前一致 > SupplierMatch 留資前 1`] = `
<div
  id="supplier-section"
/>
`;

exports[`Index.tsx 共用元件的預設輸出(不傳新 props) > 媒合不到供應商時的空狀態與改動前一致 > SupplierMatch 空狀態 1`] = `
<div
  id="supplier-section"
>
  <section
    class="py-16 bg-muted/30"
  >
    <div
      class="container px-4 mx-auto"
    >
      <div
        class="max-w-6xl mx-auto space-y-8"
      >
        <div
          class="text-center space-y-4"
        >
          <h2
            class="text-4xl md:text-5xl font-bold"
          >
            為您媒合的供應商
          </h2>
          <p
            class="text-xl text-muted-foreground"
          >
            根據您的食材需求,AI 已從合作供應商中找出最合適的選擇
          </p>
        </div>
        <div
          class="rounded-lg border bg-card text-card-foreground shadow-sm p-8 md:p-12 shadow-medium max-w-2xl mx-auto text-center"
        >
          <div
            class="space-y-4"
          >
            <div
              class="inline-flex items-center justify-center w-16 h-16 rounded-full bg-primary/10 mx-auto"
            >
              <svg
                class="lucide lucide-package-search w-8 h-8 text-primary"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21 10V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l2-1.14"
                />
                <path
                  d="m7.5 4.27 9 5.15"
                />
                <polyline
                  points="3.29 7 12 12 20.71 7"
                />
                <line
                  x1="12"
                  x2="12"
                  y1="22"
                  y2="12"
                />
                <circle
                  cx="18.5"
                  cy="15.5"
                  r="2.5"
                />
                <path
                  d="M20.27 17.27 22 19"
                />
              </svg>
            </div>
            <h3
              class="text-2xl font-bold"
            >
              已收到您的需求
            </h3>
            <p
              class="text-lg text-muted-foreground"
            >
              目前平台上暫無完全符合的供應商,專人將盡快為您媒合, 媒合結果與報價會透過您留下的聯絡方式通知您。
            </p>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;
